Fix explorviz logo from becoming blurry on some (mobile) devices

--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -58,6 +58,13 @@
   transform: rotateX(180deg);
 }
 
+#navbar-logo {
+  float: left;
+  height: 30px;
+  // fixes the logo from becoming blurry on some devices
+  transform: translateZ(0);
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
